feat: add MS07 broker heartbeat
